test/files/neg/t3160ambiguous.check
t3160ambiguous.scala:8: error: reference to Node is ambiguous;
it is imported twice in the same scope by
import scala.xml._
and import Bippy._
  def f(x: Node): String = ???  // ambiguous, because Bippy.Node is accessible
           ^
one error found
